# tuta2gotify

./: .dockerignore  .envrc  .gitignore  .t2g.sample.env  Cargo.toml  Dockerfile  README.md  config.sample.toml  docker-compose.yml
gotify/: Cargo.toml  config.sample.toml
gotify/src/: config.rs  main.rs
src/: client.rs  config.rs  main.rs
