[package]
name = "tuta_relay"
version = "0.1.0"
description = "relay tutanota emails to gotify or mail"
edition = "2021"
repository = "https://github.com/LarsHaalck/tuta_relay"

[dependencies]
tuta_poll = { version = "0.1.0", path = "../tuta_poll" }
anyhow = "1.0.75"
dirs = "5.0.1"
envy = "0.4.2"
lz4_flex = "0.11.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
structopt = "0.3.26"
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = { version = "2.4.1", features = ["serde"] }
