[package]
name = "tuta2gotify"
version = "0.1.0"
edition = "2021"
authors = ["Lars Haalck <github@larshaalck.de>"]
description = "relay tutanota emails to gotify instance"
repository = "https://github.com/LarsHaalck/tuta2gotify"
license = "GPL-3.0-only"

[dependencies]
tuta_poll = "0.1.0"
anyhow = "1.0.75"
dirs = "5.0.1"
envy = "0.4.2"
lz4_flex = "0.11.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
structopt = "0.3.26"
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = { version = "2.4.1", features = ["serde"] }
gotify = { version = "0.4.0", features = ["app"] }
html2text = "0.6.0"
handlebars = "4.5.0"
tokio = { version = "1.35.0", features = ["rt", "macros"] }
futures-core = "0.3.29"
async-stream = "0.3.5"
futures-util = "0.3.29"
